--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,10 @@
-body {
+*{
   margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+body {
+  margin: 0 10%;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -10,4 +15,69 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.card{
+  border-radius: 2rem;
+  min-height: 20rem;
+  overflow: hidden;
+  position: relative;
+}
+
+.card img{
+  position: absolute;
+  left: 0;
+  border-radius: 2rem;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+p {
+  position: absolute;
+  left: 50%;
+  bottom: 0;
+  transform: translate(-50%, 0);
+  z-index: 2;
+  color: #fff;
+  font-weight: 600;
+  width: 100%;
+  height: 40%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  font-size: 1.3rem;
+}
+
+.overlay{
+  z-index: 1;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5));
+}
+
+h1{
+  font-size: 2rem;
+  text-align: center;
+  margin: 1rem 0;
+  color: rgba(57, 57, 57);
+  line-height: 2.5rem;
+}
+h4{
+  font-size: 1rem;
+  color: rgba(57, 57, 57);
+  text-align: justify;
+}
+h3{
+  font-size: 1.5rem;
+  color: rgba(57, 57, 57);
+}
+
+li {
+  list-style-type:circle;
+  font-size: 0.8rem;
+  font-family: inherit;
+  text-align: justify;
 }
